# MedLat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  example_generator_mar.ipynb  example_generator_maskgit.ipynb  example_tokenizer.ipynb  load_models.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
api/: searchindex.js
api/.doctrees/api/: alignments.doctree  registry.doctree
api/_modules/medlat/: base.html  registry.html  utils.html
api/_modules/medlat/modules/: alignments.html
api/api/: alignments.html  registry.html
docs/: index.html
medlat/: __init__.py  base.py  registry.py  utils.py
medlat/first_stage/continuous/: register.py  vae_models.py
medlat/first_stage/continuous/modules/: maisi_modules.py
medlat/first_stage/discrete/: register.py  vq_models.py
medlat/first_stage/discrete/quantizer/: quantize.py
medlat/first_stage/token/: register.py
medlat/first_stage/token/detok/: detok.py
medlat/first_stage/token/maetok/modules/: hog.py
medlat/first_stage/token/titok/: modules.py
medlat/first_stage/token/vita/: modules.py
medlat/first_stage/token/vmae/: __init__.py  models.py  register.py
medlat/generators/autoregressive/: __init__.py
medlat/generators/autoregressive/fractal/: README.md  ar.py  fractalgen.py  mar.py  models.py  pixelloss.py  register.py  util.py
medlat/generators/autoregressive/mage/: README.md  __init__.py  mage.py  register.py  vit_mage.py  wrapper.py
medlat/generators/autoregressive/mar/: mar.py
medlat/generators/autoregressive/mar/util/: pos_embed.py
medlat/generators/autoregressive/maskbit/: __init__.py  base_model.py  ldm_vq.py  maskbit.py  pseudo_3d.py  register.py  vqgan.py  wrapper.py
medlat/generators/autoregressive/maskbit/util/: __init__.py  factorization.py  masking.py  pseudo_3d_sampling.py  quantizer_utils.py  sampling.py
medlat/generators/autoregressive/maskgit/: transformer.py
medlat/generators/autoregressive/maskgit/utils/: pos_embed.py
medlat/generators/autoregressive/muse/: __init__.py  attend.py  ldm_vq.py  muse_maskgit.py  t5.py  wrapper.py
medlat/generators/autoregressive/rar/: __init__.py  modules.py  rar.py  rardiff.py  register.py  wrapper.py
medlat/generators/autoregressive/taming/: README.md  __init__.py  register.py  transformer.py  wrapper.py
medlat/generators/non_autoregressive/: __init__.py
medlat/generators/non_autoregressive/diffae/: README.md  __init__.py  bg_blocks.py  bg_unet.py  bg_unet_autoenc.py
medlat/generators/non_autoregressive/dit/: models.py
medlat/generators/non_autoregressive/mdt/: README.md  models.py  register.py  wrapper.py
medlat/generators/non_autoregressive/uvit/: README.md  models.py  register.py  wrapper.py
medlat/modules/: alignments.py  metrics.py  pos_embed.py  wrapper.py
medlat/scheduling/: __init__.py  gaussian.py  gaussian_diffusion.py  integrators.py  utils.py
medtok/: __init__.py  utils.py
medtok/continuous/: register.py  vae_models.py
medtok/discrete/: register.py
medtok/discrete/quantizer/: quantize.py
medtok/first_stage/continuous/: register.py  vae_models.py
medtok/first_stage/continuous/modules/dcae_modules/: dcae_modules.py
medtok/first_stage/discrete/: register.py  vq_models.py
medtok/first_stage/discrete/quantizer/: quantize.py
medtok/first_stage/token/: __init__.py  register.py
medtok/first_stage/token/detok/: detok.py
medtok/first_stage/token/maetok/modules/: vit_models.py
medtok/first_stage/token/vmae/: models.py  register.py
medtok/generators/dit/: models.py
medtok/modules/: alignments.py  in_and_out.py  vit_core.py
src/: README.md  maisi_modules.py  modules.py
src/continuous/: __init__.py  vae_models.py
src/discrete/: __init__.py  register.py  vq_models.py
src/discrete/quantizer/: modules.py  quantize.py
src/models/utils/: __init__.py  in_and_out.py  pos_embed.py
src/token/: __init__.py
src/token/detok/: __init__.py  detok.py
src/token/dinotok/: __init__.py  dinotok.py
src/token/maetok/: maetok.py
src/token/maetok/modules/: rope_utils.py  to_pixel.py  vit_models.py
src/token/medtok/: __init__.py  medtok.py
src/token/titok/: modules.py  titok.py
src/token/titok/modules_test/: base_model.py  blocks.py  losses.py
src/token/vita/: vita.py
tests/: registry_integration.py  test_esser_shift.py  test_integration_wrapper.py  test_modules_embeddings.py  test_modules_nn_utils.py  test_modules_pos_embed.py  test_quantize_hierarchy.py  test_quantize_instrumentation.py  test_registry_core.py  test_roundtrip.py  test_scheduling_path.py  test_scheduling_utils.py  test_smoke.py  test_transport_path.py  test_transport_utils.py  test_vq_models_metrics.py
(+1 files in other folders)
