[build-system]
# setuptools 69+ adds PEP 639 "License-File" in wheel metadata; older twine fails
# `twine check` with "unrecognized field 'license-file'". Pin until twine/packaging catch up.
requires = ["setuptools>=61.0,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medlat"
version = "0.1.4"
description = "A comprehensive collection of quantizers, continuous autoencoders, and tokenizers for medical imaging and general visual data processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Niklas Bubeck", email = "niklas.bubeck@tum.de"}
]
keywords = [
    "medical imaging",
    "tokenization",
    "quantization",
    "autoencoder",
    "vae",
    "vq-vae",
    "vq-gan",
    "pytorch",
    "deep learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # SDPA (torch.nn.functional.scaled_dot_product_attention) is used
    # unconditionally across every attention module — so PyTorch 2.0+ is
    # mandatory (previously this constraint was 1.9.0 but the code already
    # relied on SDPA in 18+ files).
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "einops>=0.4.0",
    "omegaconf>=2.1.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
timm = ["timm>=0.6.0"]
monai = ["monai>=1.0.0"]  # required by the MAISI continuous VAE variants
alignment = ["open-clip-torch>=2.0.0"]
flow = ["torchdiffeq>=0.2.0"]
muse = [
    "transformers>=4.30.0",
]
all = [
    "timm>=0.6.0",
    "monai>=1.0.0",
    "open-clip-torch>=2.0.0",
    "torchdiffeq>=0.2.0",
    "transformers>=4.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
    "twine>=5.1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["medlat*"]
exclude = ["tests*"]
[tool.setuptools.package-data]
"*" = ["*.py", "*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    "medlat.egg-info",
    "docs/source/conf.py",
    "examples",
]

[tool.ruff.lint]
# Conservative default: catch real bugs and hygiene issues without touching style.
# Expand over time as the codebase gets cleaner.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line-too-long (handled by black)
    "E741",   # ambiguous variable names (common in ML: `l`, `I`, `O`)
    "B008",   # function calls in defaults (torch.nn pattern)
    "B905",   # zip without strict= (py310+ only)
    "UP006",  # keep `typing.List` etc. for py39 compat
    "UP007",  # keep `Optional[X]` etc. for py39 compat
    "UP035",  # keep deprecated typing aliases for py39 compat
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]   # re-exports & wildcard imports are intentional here
"tests/*" = ["F401", "F811"]       # fixtures & re-imports are common in pytest

[tool.ruff.lint.isort]
known-first-party = ["medlat"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# Codebase-wide strictness is deferred until type-hint coverage improves.
# Per-module strictness can be layered on incrementally via [[tool.mypy.overrides]].
files = [
    "medlat/base.py",
    "medlat/utils.py",
    "medlat/modules/wrapper.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["medlat"]
omit = [
    "medlat/*/register.py",
    "medlat/*/*/register.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]






